(_markdown.scss): fix images clipping outside of container
As seen on blog post image (home page)

--- a/src/vite/src/assets/css/_markdown.scss
+++ b/src/vite/src/assets/css/_markdown.scss
@@ -63,7 +63,6 @@
 
 /* images */
 .markdown img {
-  box-sizing: content-box;
   padding: 3px;
   border: 1px solid #c9c7b5;
   display: block;
